@@ -1,3 +1,8 @@
+2010-10-25 S. Thiell <stephane.thiell@cea.fr>
+
+	* CLI/Clush.py: Add launched-in-background checks before enabling user
+	interaction (fix trac ticket #114).
+
 2010-10-20 S. Thiell <stephane.thiell@cea.fr>
 
 	* Task.py: Docstring improvements (trac tickets #120, #122).
